public/sandbox.css
body {
  display: flex;
  flex-direction: column;
  height: 100vh;
  margin: 0;
}

#panels {
  flex: 1;
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

#panels > * {
  flex-grow: 2;
  flex-basis: 0;
}

#editor, #editor2 {
  overflow: scroll;
  display: flex;
  flex-direction: column;
}

.cm-editor {
  flex-grow: 1;
}

#tree-panel, #source-panel, #output-panel, #memdia-panel {
  padding: 10px;
  font-family: monospace;
  overflow-y: scroll;
}

#tree-panel, #output-panel, #source-panel {
  overflow-x: auto;
  white-space: pre;
}

#tree-panel {
  background-color: aqua;
  display: none;
}

#source-panel {
  background-color: rgb(230, 200, 190);
  display: none;
}

#output-panel {
  flex: 1;
  background-color: rgb(230, 230, 230);
}

#memdia-panel {
  background-color: #1e1e1e;
  display: none;
}

#controls {
  padding: 1ex;
}

#controls > select {
  margin-right: 1em;
}

#step-button {
  margin-right: 1em;
}


var {
  color: blue;
  font-weight: bold;
  font-style: normal;
}

.jump-button {
  background: none;
  border: none;
  font-family: inherit;
  font-size: inherit;
  color: rebeccapurple;
  font-weight: bold;
  margin: 0;
  padding: 0;
  cursor: pointer;
  text-decoration: underline;
}

.jump-button:active {
  color: orange;
}

.divider {
  max-width: 5px;
  background-color: #2d485a;
}

